# pyc

./: LICENSE  README.md  pyproject.toml
docs/performance/fib2/: fib.pxd  fib.py
docs/performance/fib3/: fib.c
docs/performance/primes/: README.md  primes.jl  primes.pxd  primes.py
src/pyc/: __main__.py  cli.py  compile.py
